<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/flag_question"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingBottom="20dp" />

        <ImageView
            android:id="@+id/flag_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/ic_flag_of_argentina"
            android:contentDescription="@string/flag_image_description"
            tools:ignore="ImageContrastCheck"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

<!--            tools:max => divide bar to x portion-->
            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                tools:max="10"
                tools:progress="4"
                />

            <TextView
                android:id="@+id/question_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="4/10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_ll"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:gravity="center" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" />

    </LinearLayout>

</ScrollView>